--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,10 @@
 <body>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Home Page</a>
+</nav>
 <div class="container">
 
     <h1 align="center">Actors List</h1>
@@ -17,6 +21,7 @@
             <th>Actor name</th>
             <th>Actor surname</th>
             <th>role</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -24,6 +29,8 @@
             <td th:text="${actor.name}"></td>
             <td th:text="${actor.surname}"></td>
             <td th:text="${actor.role}"></td>
+            <td> <a th:href="@{/showFormForUpdate/{id}(id=${actor.id})}" class="btn btn-primary">Update</a>
+                <a th:href="@{/deleteActor/{id}(id=${actor.id})}" class="btn btn-danger">Delete</a></td>
         </tr>
         </tbody>
     </table>
