--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Actors Management System</title>
+    <title>MovieCollection Management System</title>
 </head>
 <body>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark">
     <a class="navbar-brand" href="/">Home Page</a>
 </nav>
 <div class="container">
@@ -34,7 +34,33 @@
         </tr>
         </tbody>
     </table>
-
+    <h1 align="center">Movie List</h1>
+    <a th:href="@{/showNewMovieForm}" class="btn btn-primary btn-sm mb-3">Add Movie</a>
+    <table border="1" class="table table-striped table-responsive-md">
+        <thead>
+        <tr>
+            <th>Movie Name</th>
+            <th>Movie Type</th>
+            <th>Movie Media</th>
+            <th>Movie Explanation</th>
+            <th>Movie Release Year</th>
+            <th>Movie Language</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="movie : ${listMovies}">
+            <td th:text="${movie.name}"></td>
+            <td th:text="${movie.type}"></td>
+            <td th:text="${movie.media}"></td>
+            <td th:text="${movie.explanation}"></td>
+            <td th:text="${movie.releaseYear}"></td>
+            <td th:text="${movie.language}"></td>
+            <td> <a th:href="@{/showFormForUpdateMovie/{id}(id=${movie.id})}" class="btn btn-primary">Update</a>
+                <a th:href="@{/deleteMovie/{id}(id=${movie.id})}" class="btn btn-danger">Delete</a></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 </body>
