--- a/src/main/resources/templates/new_actor.html
+++ b/src/main/resources/templates/new_actor.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Actor Management System</title>
+    <title>MovieCollection Management System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
     <hr>
     <h2>Save Actor</h2>
 
-    <form action="#" th:action="@{/saveActor}" th:object="${actor}" ,method="POST">
+    <form action="#" th:action="@{/saveActor}" th:object="${actor}" ,method="post">
 
         <input type="text" th:field="*{name}" placeholder="Actor firstName" class="form-control mb-4 col-4">
         <input type="text" th:field="*{surname}" placeholder="Actor lastname" class="form-control mb-4 col-4">
