--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,16 +11,17 @@
 <nav class="navbar navbar-dark">
     <a class="navbar-brand" href="/">Home Page</a>
 </nav>
+
 <div class="container">
 
     <h1 align="center">Actors List</h1>
     <a th:href="@{/showNewActorForm}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
     <table border="1" class="table table-striped table-responsive-md">
-        <thead>
+        <thead class="thead-dark">
         <tr>
             <th>Actor name</th>
             <th>Actor surname</th>
-            <th>role</th>
+            <th>Actor Role</th>
             <th>Actions</th>
         </tr>
         </thead>
@@ -29,15 +30,16 @@
             <td th:text="${actor.name}"></td>
             <td th:text="${actor.surname}"></td>
             <td th:text="${actor.role}"></td>
-            <td> <a th:href="@{/showFormForUpdate/{id}(id=${actor.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/deleteActor/{id}(id=${actor.id})}" class="btn btn-danger">Delete</a></td>
+            <td> <a th:href="@{/showFormForUpdate/{id}(id=${actor.id})}" class="btn btn-primary mr-4">Update</a>
+                <a th:href="@{/deleteActor/{id}(id=${actor.id})}" class="btn btn-danger mr-4">Delete</a>
+                <a th:href="@{/getByActorId/{id}(id=${actor.id})}" class="btn btn-secondary">Detail</a></td>
         </tr>
         </tbody>
     </table>
     <h1 align="center">Movie List</h1>
     <a th:href="@{/showNewMovieForm}" class="btn btn-primary btn-sm mb-3">Add Movie</a>
     <table border="1" class="table table-striped table-responsive-md">
-        <thead>
+        <thead class="thead-dark">
         <tr>
             <th>Movie Name</th>
             <th>Movie Type</th>
@@ -46,6 +48,7 @@
             <th>Movie Release Year</th>
             <th>Movie Language</th>
             <th>Actions</th>
+
         </tr>
         </thead>
         <tbody>
@@ -57,8 +60,10 @@
             <td th:text="${movie.releaseYear}"></td>
             <td th:text="${movie.language}"></td>
             <td> <a th:href="@{/showFormForUpdateMovie/{id}(id=${movie.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/deleteMovie/{id}(id=${movie.id})}" class="btn btn-danger">Delete</a>
-                <a th:href="@{/getById/{id}(id=${movie.id})}" class="btn btn-secondary">Detail</a></td>
+                <a th:href="@{/deleteMovie/{id}(id=${movie.id})}" class="btn btn-danger ml-3">Delete</a>
+
+            <a th:href="@{/getById/{id}(id=${movie.id})}" class="btn btn-secondary mt-3">Detail</a>
+            </td>
         </tr>
         </tbody>
     </table>
