--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,9 @@
     <title>MovieCollection Management System</title>
 </head>
 <body>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link href="/webjars/bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet" />
+<script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <nav class="navbar navbar-dark">
     <a class="navbar-brand" href="/">Home Page</a>
@@ -15,7 +16,8 @@
 <div class="container">
 
     <h1 align="center">Actors List</h1>
-    <a th:href="@{/showNewActorForm}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
+    <a th:href="@{/showNewActorForm}" class="btn btn-primary btn-sm mb-3">Add Actor</a>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" >Add Actor Modal</button>
     <table border="1" class="table table-striped table-responsive-md">
         <thead class="thead-dark">
         <tr>
@@ -35,6 +37,53 @@
                 <a th:href="@{/getByActorId/{id}(id=${actor.id})}" class="btn btn-secondary">Detail</a></td>
         </tr>
         </tbody>
+
+        <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <form th:action="@{/saveActor}" method="post">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">New Actor Modal</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+
+                            <div class="form-group">
+                                <label for="recipient-name1" class="col-form-label">Firstname</label>
+                                <input type="text" class="form-control" id="recipient-name1" name="name">
+                            </div>
+
+                        <div class="form-group">
+                            <label for="recipient-name2" class="col-form-label">LastName</label>
+                            <input type="text" class="form-control" id="recipient-name2" name="surname">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="recipient-name3" class="col-form-label">Role</label>
+                            <input type="text" class="form-control" id="recipient-name3" name="role">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="recipient-name4" class="col-form-label">Movie Id</label>
+                            <input type="number" class="form-control" id="recipient-name4" name="movie.id">
+                        </div>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+            </form>
+        </div>
+
+
+
+
     </table>
     <h1 align="center">Movie List</h1>
     <a th:href="@{/showNewMovieForm}" class="btn btn-primary btn-sm mb-3">Add Movie</a>
