update Form has been arranged

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <link href="/webjars/bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet" />
 <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../static/js/main.js"></script>
 
 <nav class="navbar navbar-dark">
     <a class="navbar-brand" href="/">Home Page</a>
